# skity

./: .gitignore  .habitat  AGENTS.md  BUILD.gn  CMakeLists.txt  README.md  pugixml-static.gni  skity.gni  wgsl-cross.gni
.github/: CODEOWNERS
harness/font/: CMakeLists.txt
harness/font/artifact/: artifact_validator.cc  artifact_validator.hpp  artifact_writer.cc  artifact_writer.hpp  json_io.cc  json_io.hpp
harness/font/case/: case_document.cc  case_document.hpp  manifest_document.cc  manifest_document.hpp  platform_target.cc  platform_target.hpp  repo_uri.cc  repo_uri.hpp  validation.cc  validation.hpp
harness/font/cases/family_style_set/: arial_directwrite.json  arial_italic_coretext.json  baskerville_weight_500_coretext.json  helvetica_coretext.json  helvetica_weight_500_coretext.json  segoe_ui_directwrite.json
harness/font/cases/font_manager/: apple_system_ui_font_character_arabic_alef_coretext.json  apple_system_ui_font_character_devanagari_ka_coretext.json  apple_system_ui_font_character_emoji_coretext.json  apple_system_ui_font_character_emoji_grinning_coretext.json  apple_system_ui_font_character_ja_hiragana_coretext.json  apple_system_ui_font_character_ko_hangul_coretext.json  apple_system_ui_font_character_symbol_music_gclef_coretext.json  apple_system_ui_font_character_thai_ko_kai_coretext.json  apple_system_ui_font_character_zh_hans_coretext.json  apple_system_ui_font_character_zh_hant_coretext.json  apple_system_ui_font_regular_coretext.json  apple_system_ui_font_weight_500_coretext.json  css_generic_sans_serif_coretext.json  default_typeface_coretext.json  default_typeface_directwrite.json  match_family_style_arial_regular_directwrite.json  match_family_style_character_cjk_coretext.json  match_family_style_character_cjk_directwrite.json  match_family_style_character_emoji_directwrite.json  match_family_style_character_japanese_hiragana_directwrite.json  match_family_style_character_korean_hangul_directwrite.json  match_family_style_character_latin_missing_family_directwrite.json  match_family_style_helvetica_regular_coretext.json  match_family_style_helvetica_weight_500_coretext.json  match_family_style_segoe_ui_regular_directwrite.json
harness/font/cases/font_metrics/: roboto_regular_32_directwrite.json  roboto_regular_64_coretext.json  roboto_regular_96_directwrite.json
harness/font/cases/glyph_image/: arial_regular_latin_A_directwrite.json  arial_regular_latin_A_fake_bold_directwrite.json  microsoft_yahei_ui_cjk_directwrite.json  noto_color_emoji_grinning_directwrite.json  roboto_regular_latin_A_32_directwrite.json  roboto_regular_latin_A_blue_alpha_directwrite.json  roboto_regular_latin_A_blue_directwrite.json  roboto_regular_latin_A_context_scale_2_directwrite.json  roboto_regular_latin_A_diaeresis_directwrite.json  roboto_regular_latin_A_directwrite.json  roboto_regular_latin_A_no_hinting_directwrite.json  roboto_regular_latin_A_stroke_directwrite.json  roboto_regular_latin_A_transform_directwrite.json  segoe_ui_emoji_grinning_directwrite.json
harness/font/cases/glyph_metrics/: noto_color_emoji_directwrite.json  noto_sans_cjk_ttc_directwrite.json  roboto_flex_variation_hidden_axis_data_latin_directwrite.json  roboto_flex_variation_hidden_axis_latin_directwrite.json  roboto_flex_variation_multi_axis_data_latin_directwrite.json  roboto_flex_variation_multi_axis_latin_directwrite.json  roboto_flex_variation_wght_700_data_latin_directwrite.json  roboto_flex_variation_wght_700_latin_directwrite.json  roboto_regular_latin_coretext.json  roboto_regular_latin_directwrite.json  (+2 more)
harness/font/compare/: compare_engine.cc  compare_engine.hpp
harness/font/manifests/: ios_device_coretext_explicit_source_smoke.json  ios_device_coretext_full.json  ios_device_coretext_system_match_smoke.json  ios_sim_coretext_explicit_source_smoke.json  ios_sim_coretext_full.json  ios_sim_coretext_system_match_smoke.json  pc_macos_coretext_full.json  pc_macos_coretext_match_smoke.json  pc_macos_coretext_smoke.json  windows_directwrite_color_font_smoke.json  windows_directwrite_explicit_smoke.json  windows_directwrite_fallback_smoke.json  windows_directwrite_font_metrics_smoke.json  windows_directwrite_full.json  windows_directwrite_glyph_image_smoke.json  windows_directwrite_glyph_metrics_smoke.json  windows_directwrite_glyph_path_smoke.json  windows_directwrite_glyph_smoke.json  windows_directwrite_match_smoke.json  windows_directwrite_table_smoke.json  windows_directwrite_variation_clone_smoke.json  windows_directwrite_variation_smoke.json
harness/font/probe/: backend_support.hpp  font_manager_probe.cc  font_manager_probe.hpp  glyph_image_probe.cc  glyph_image_probe.hpp  glyph_path_probe.cc  glyph_path_probe.hpp  metrics_probe.cc  metrics_probe.hpp  typeface_identity.cc  typeface_identity.hpp  typeface_probe.cc  typeface_probe.hpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  hw_benchmarks.cc
test/bench/case/: draw_circle.cc  draw_circle.hpp
test/bench/common/: bench_command_queue_proxy.mm  bench_context_gl.cc  bench_context_mtl.mm  bench_gl_context_mac.mm  bench_target_mtl.mm
test/golden/: CMakeLists.txt  README.md  golden_test.cc
test/golden/cases/: CMakeLists.txt
test/golden/common/: golden_test_check.cc  golden_test_check.hpp  golden_test_env.cc  golden_test_env.hpp  golden_texture.hpp
test/golden/playground/: CMakeLists.txt
test/ut/: CMakeLists.txt
test/ut/codec/: webp_codec_test.cc
test/ut/geometry/: rect_test.cc
test/ut/graphic/: bitmap_sampler_test.cc  bitmap_test.cc  paint_test.cc  path_test.cc  texture_format_test.cc
test/ut/io/: pixmap_test.cc
test/ut/recorder/: display_list_region_test.cc  display_list_rtree_test.cc  display_list_test.cc
test/ut/render/: resource_cache_test.cc  sw_canvas_test.cc
test/ut/text/: atlas_glyph_test.cc  concurrent_runner.h  coretext_typeface_test.cc  dwrite_stability_test.cc  scaler_context_cache_test.cc  typeface_test.cc
test/ut/wgx/: wgx_backend_name_resolution_test.cc  wgx_resolver_test.cc  wgx_spirv_smoke_test.cc  wgx_uniform_layout_test.cc  wgx_value_test.cc  wgx_vulkan_pipeline_test.cc
(+581 files in other folders)
