_pugixml_static_root = get_path_info(".", "abspath")
pugixml_static_sources =
    [ "$_pugixml_static_root/third_party/pugixml/src/pugixml.cpp" ]
pugixml_static_include_dirs =
    [ "$_pugixml_static_root/third_party/pugixml/src" ]
pugixml_static_compile_definitions = []
pugixml_static_compile_options = [
  "-fvisibility=hidden",
  "-fvisibility-inlines-hidden",
]
pugixml_static_link_libs = []
