_skity_root = get_path_info(".", "abspath")
skity_sources = [
  "$_skity_root/include/skity/effect/mask_filter.hpp",
  "$_skity_root/include/skity/effect/path_effect.hpp",
  "$_skity_root/include/skity/effect/shader.hpp",
  "$_skity_root/include/skity/geometry/point.hpp",
  "$_skity_root/include/skity/geometry/rect.hpp",
  "$_skity_root/include/skity/geometry/rrect.hpp",
  "$_skity_root/include/skity/geometry/scalar.hpp",
  "$_skity_root/include/skity/geometry/stroke.hpp",
  "$_skity_root/include/skity/geometry/vector.hpp",
  "$_skity_root/include/skity/gpu/gpu_backend_type.hpp",
  "$_skity_root/include/skity/gpu/gpu_context.hpp",
  "$_skity_root/include/skity/gpu/gpu_surface.hpp",
  "$_skity_root/include/skity/gpu/texture.hpp",
  "$_skity_root/include/skity/graphic/alpha_type.hpp",
  "$_skity_root/include/skity/graphic/bitmap.hpp",
  "$_skity_root/include/skity/graphic/color.hpp",
  "$_skity_root/include/skity/graphic/image.hpp",
  "$_skity_root/include/skity/graphic/paint.hpp",
  "$_skity_root/include/skity/graphic/path.hpp",
  "$_skity_root/include/skity/graphic/path_measure.hpp",
  "$_skity_root/include/skity/graphic/path_op.hpp",
  "$_skity_root/include/skity/graphic/sampling_options.hpp",
  "$_skity_root/include/skity/graphic/tile_mode.hpp",
  "$_skity_root/include/skity/io/data.hpp",
  "$_skity_root/include/skity/io/logger.hpp",
  "$_skity_root/include/skity/io/pixmap.hpp",
  "$_skity_root/include/skity/macros.hpp",
  "$_skity_root/include/skity/recorder/display_list.hpp",
  "$_skity_root/include/skity/recorder/picture_recorder.hpp",
  "$_skity_root/include/skity/recorder/recording_canvas.hpp",
  "$_skity_root/include/skity/render/canvas.hpp",
  "$_skity_root/include/skity/skity.hpp",
  "$_skity_root/include/skity/text/font.hpp",
  "$_skity_root/include/skity/text/font_arguments.hpp",
  "$_skity_root/include/skity/text/font_descriptor.hpp",
  "$_skity_root/include/skity/text/font_manager.hpp",
  "$_skity_root/include/skity/text/font_metrics.hpp",
  "$_skity_root/include/skity/text/font_style.hpp",
  "$_skity_root/include/skity/text/text_blob.hpp",
  "$_skity_root/include/skity/text/text_run.hpp",
  "$_skity_root/include/skity/text/typeface.hpp",
  "$_skity_root/include/skity/text/utf.hpp",
  "$_skity_root/src/base/hash.cc",
  "$_skity_root/src/base/hash.hpp",
  "$_skity_root/src/base/lru_cache.hpp",
  "$_skity_root/src/base/mapping.cc",
  "$_skity_root/src/base/platform/posix/file_posix.cc",
  "$_skity_root/src/base/platform/posix/mapping_posix.cc",
  "$_skity_root/src/base/unique_fd.cc",
  "$_skity_root/src/effect/color_filter.cc",
  "$_skity_root/src/effect/color_filter_base.hpp",
  "$_skity_root/src/effect/dash_path_effect.cc",
  "$_skity_root/src/effect/dash_path_effect.hpp",
  "$_skity_root/src/effect/discrete_path_effect.cc",
  "$_skity_root/src/effect/discrete_path_effect.hpp",
  "$_skity_root/src/effect/gradient_fallback.cc",
  "$_skity_root/src/effect/gradient_fallback.hpp",
  "$_skity_root/src/effect/gradient_shader.cc",
  "$_skity_root/src/effect/gradient_shader.hpp",
  "$_skity_root/src/effect/image_filter.cc",
  "$_skity_root/src/effect/mask_filter.cc",
  "$_skity_root/src/effect/path_effect.cc",
  "$_skity_root/src/effect/pixmap_shader.cc",
  "$_skity_root/src/effect/pixmap_shader.hpp",
  "$_skity_root/src/effect/shader.cc",
  "$_skity_root/src/geometry/camera.cc",
  "$_skity_root/src/geometry/conic.cc",
  "$_skity_root/src/geometry/conic.hpp",
  "$_skity_root/src/geometry/cubic.cc",
  "$_skity_root/src/geometry/cubic.hpp",
  "$_skity_root/src/geometry/geometry.cc",
  "$_skity_root/src/geometry/geometry.hpp",
  "$_skity_root/src/geometry/glm_helper.hpp",
  "$_skity_root/src/geometry/math.hpp",
  "$_skity_root/src/geometry/matrix.cc",
  "$_skity_root/src/geometry/point_priv.hpp",
  "$_skity_root/src/geometry/quaternion.cc",
  "$_skity_root/src/geometry/rect.cc",
  "$_skity_root/src/geometry/rrect.cc",
  "$_skity_root/src/geometry/stroke.cc",
  "$_skity_root/src/gpu/backend_cast.hpp",
  "$_skity_root/src/gpu/gpu_buffer.hpp",
  "$_skity_root/src/gpu/gpu_context_impl.cc",
  "$_skity_root/src/gpu/gpu_context_impl.hpp",
  "$_skity_root/src/gpu/gpu_device.cc",
  "$_skity_root/src/gpu/gpu_device.hpp",
  "$_skity_root/src/gpu/gpu_render_pipeline.cc",
  "$_skity_root/src/gpu/gpu_render_pipeline.hpp",
  "$_skity_root/src/gpu/gpu_render_target.cc",
  "$_skity_root/src/gpu/gpu_sampler.cc",
  "$_skity_root/src/gpu/gpu_sampler.hpp",
  "$_skity_root/src/gpu/gpu_shader_function.hpp",
  "$_skity_root/src/gpu/gpu_shader_module.cc",
  "$_skity_root/src/gpu/gpu_shader_module.hpp",
  "$_skity_root/src/gpu/gpu_surface_impl.cc",
  "$_skity_root/src/gpu/gpu_surface_impl.hpp",
  "$_skity_root/src/gpu/gpu_texture.cc",
  "$_skity_root/src/gpu/gpu_texture.hpp",
  "$_skity_root/src/gpu/mtl/formats_mtl.h",
  "$_skity_root/src/gpu/mtl/formats_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_blit_pass_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_blit_pass_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_buffer_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_buffer_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_command_buffer_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_command_buffer_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_context_impl_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_context_impl_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_device_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_device_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_render_pass_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_render_pass_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_render_pipeline_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_render_pipeline_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_sampler_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_sampler_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_shader_function_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_shader_function_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_surface_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_surface_mtl.mm",
  "$_skity_root/src/gpu/mtl/gpu_texture_mtl.h",
  "$_skity_root/src/gpu/mtl/gpu_texture_mtl.mm",
  "$_skity_root/src/gpu/texture_impl.cc",
  "$_skity_root/src/gpu/texture_impl.hpp",
  "$_skity_root/src/gpu/texture_manager.cc",
  "$_skity_root/src/gpu/texture_manager.hpp",
  "$_skity_root/src/graphic/bitmap.cc",
  "$_skity_root/src/graphic/bitmap_sampler.cc",
  "$_skity_root/src/graphic/bitmap_sampler.hpp",
  "$_skity_root/src/graphic/blend_mode.cc",
  "$_skity_root/src/graphic/blend_mode_priv.hpp",
  "$_skity_root/src/graphic/color.cc",
  "$_skity_root/src/graphic/color_priv.cc",
  "$_skity_root/src/graphic/color_priv.hpp",
  "$_skity_root/src/graphic/color_priv_neon.hpp",
  "$_skity_root/src/graphic/contour_measure.cc",
  "$_skity_root/src/graphic/contour_measure.hpp",
  "$_skity_root/src/graphic/image.cc",
  "$_skity_root/src/graphic/paint.cc",
  "$_skity_root/src/graphic/path.cc",
  "$_skity_root/src/graphic/path_measure.cc",
  "$_skity_root/src/graphic/path_op.cc",
  "$_skity_root/src/graphic/path_priv.cc",
  "$_skity_root/src/graphic/path_priv.hpp",
  "$_skity_root/src/graphic/path_scanner.cc",
  "$_skity_root/src/graphic/path_scanner.hpp",
  "$_skity_root/src/graphic/path_visitor.cc",
  "$_skity_root/src/graphic/path_visitor.hpp",
  "$_skity_root/src/graphic/pathop/clipper2/core.h",
  "$_skity_root/src/graphic/pathop/clipper2/engine.cc",
  "$_skity_root/src/graphic/pathop/clipper2/engine.h",
  "$_skity_root/src/graphic/pathop/path_op_engine.cc",
  "$_skity_root/src/graphic/pathop/path_op_engine.hpp",
  "$_skity_root/src/io/data.cc",
  "$_skity_root/src/io/pixmap.cc",
  "$_skity_root/src/logging.cc",
  "$_skity_root/src/logging.hpp",
  "$_skity_root/src/recorder/display_list.cc",
  "$_skity_root/src/recorder/display_list_builder.hpp",
  "$_skity_root/src/recorder/display_list_region.cc",
  "$_skity_root/src/recorder/display_list_region.hpp",
  "$_skity_root/src/recorder/display_list_rtree.cc",
  "$_skity_root/src/recorder/display_list_rtree.hpp",
  "$_skity_root/src/recorder/picture_recorder.cc",
  "$_skity_root/src/recorder/recorded_op.hpp",
  "$_skity_root/src/recorder/recording_canvas.cc",
  "$_skity_root/src/render/canvas.cc",
  "$_skity_root/src/render/canvas_state.cc",
  "$_skity_root/src/render/canvas_state.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_blur_filter.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_blur_filter.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_gradient_fragment.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_gradient_fragment.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_image_filter.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_image_filter.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_solid_color.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_solid_color.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_solid_vertex_color.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_solid_vertex_color.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_stencil_fragment.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_stencil_fragment.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_text_fragment.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_text_fragment.hpp",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_texture_fragment.cc",
  "$_skity_root/src/render/hw/draw/fragment/wgsl_texture_fragment.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_clip_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_clip_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_filter_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_filter_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_path_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_path_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_rrect_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_rrect_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_tess_path_fill_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_tess_path_fill_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_tess_path_stroke_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_tess_path_stroke_geometry.hpp",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_text_geometry.cc",
  "$_skity_root/src/render/hw/draw/geometry/wgsl_text_geometry.hpp",
  "$_skity_root/src/render/hw/draw/hw_draw_step.cc",
  "$_skity_root/src/render/hw/draw/hw_draw_step.hpp",
  "$_skity_root/src/render/hw/draw/hw_dynamic_draw.cc",
  "$_skity_root/src/render/hw/draw/hw_dynamic_draw.hpp",
  "$_skity_root/src/render/hw/draw/hw_dynamic_path_clip.cc",
  "$_skity_root/src/render/hw/draw/hw_dynamic_path_clip.hpp",
  "$_skity_root/src/render/hw/draw/hw_dynamic_path_draw.cc",
  "$_skity_root/src/render/hw/draw/hw_dynamic_path_draw.hpp",
  "$_skity_root/src/render/hw/draw/hw_dynamic_rrect_draw.cc",
  "$_skity_root/src/render/hw/draw/hw_dynamic_rrect_draw.hpp",
  "$_skity_root/src/render/hw/draw/hw_dynamic_text_draw.cc",
  "$_skity_root/src/render/hw/draw/hw_dynamic_text_draw.hpp",
  "$_skity_root/src/render/hw/draw/hw_wgsl_fragment.hpp",
  "$_skity_root/src/render/hw/draw/hw_wgsl_geometry.hpp",
  "$_skity_root/src/render/hw/draw/hw_wgsl_shader_writer.cc",
  "$_skity_root/src/render/hw/draw/hw_wgsl_shader_writer.hpp",
  "$_skity_root/src/render/hw/draw/step/clip_step.cc",
  "$_skity_root/src/render/hw/draw/step/clip_step.hpp",
  "$_skity_root/src/render/hw/draw/step/color_step.cc",
  "$_skity_root/src/render/hw/draw/step/color_step.hpp",
  "$_skity_root/src/render/hw/draw/step/stencil_step.cc",
  "$_skity_root/src/render/hw/draw/step/stencil_step.hpp",
  "$_skity_root/src/render/hw/draw/wgx_filter.cc",
  "$_skity_root/src/render/hw/draw/wgx_filter.hpp",
  "$_skity_root/src/render/hw/draw/wgx_programmable_blending.cc",
  "$_skity_root/src/render/hw/draw/wgx_programmable_blending.hpp",
  "$_skity_root/src/render/hw/draw/wgx_utils.cc",
  "$_skity_root/src/render/hw/draw/wgx_utils.hpp",
  "$_skity_root/src/render/hw/filters/hw_blur_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_blur_filter.hpp",
  "$_skity_root/src/render/hw/filters/hw_color_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_color_filter.hpp",
  "$_skity_root/src/render/hw/filters/hw_down_sampler_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_down_sampler_filter.hpp",
  "$_skity_root/src/render/hw/filters/hw_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_filter.hpp",
  "$_skity_root/src/render/hw/filters/hw_filters.cc",
  "$_skity_root/src/render/hw/filters/hw_filters.hpp",
  "$_skity_root/src/render/hw/filters/hw_matrix_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_matrix_filter.hpp",
  "$_skity_root/src/render/hw/filters/hw_merge_filter.cc",
  "$_skity_root/src/render/hw/filters/hw_merge_filter.hpp",
  "$_skity_root/src/render/hw/hw_buffer_layout_map.cc",
  "$_skity_root/src/render/hw/hw_buffer_layout_map.hpp",
  "$_skity_root/src/render/hw/hw_canvas.cc",
  "$_skity_root/src/render/hw/hw_canvas.hpp",
  "$_skity_root/src/render/hw/hw_draw.cc",
  "$_skity_root/src/render/hw/hw_draw.hpp",
  "$_skity_root/src/render/hw/hw_geometry_raster.cc",
  "$_skity_root/src/render/hw/hw_geometry_raster.hpp",
  "$_skity_root/src/render/hw/hw_layer.cc",
  "$_skity_root/src/render/hw/hw_layer.hpp",
  "$_skity_root/src/render/hw/hw_layer_state.cc",
  "$_skity_root/src/render/hw/hw_layer_state.hpp",
  "$_skity_root/src/render/hw/hw_path_aa_outline.cc",
  "$_skity_root/src/render/hw/hw_path_aa_outline.hpp",
  "$_skity_root/src/render/hw/hw_path_raster.cc",
  "$_skity_root/src/render/hw/hw_path_raster.hpp",
  "$_skity_root/src/render/hw/hw_path_visitor.cc",
  "$_skity_root/src/render/hw/hw_path_visitor.hpp",
  "$_skity_root/src/render/hw/hw_pipeline_key.cc",
  "$_skity_root/src/render/hw/hw_pipeline_key.hpp",
  "$_skity_root/src/render/hw/hw_pipeline_lib.cc",
  "$_skity_root/src/render/hw/hw_pipeline_lib.hpp",
  "$_skity_root/src/render/hw/hw_render_pass_builder.cc",
  "$_skity_root/src/render/hw/hw_render_pass_builder.hpp",
  "$_skity_root/src/render/hw/hw_render_target_cache.hpp",
  "$_skity_root/src/render/hw/hw_resource_cache.hpp",
  "$_skity_root/src/render/hw/hw_stage_buffer.cc",
  "$_skity_root/src/render/hw/hw_stage_buffer.hpp",
  "$_skity_root/src/render/hw/hw_static_buffer.cc",
  "$_skity_root/src/render/hw/hw_static_buffer.hpp",
  "$_skity_root/src/render/hw/layer/hw_filter_layer.cc",
  "$_skity_root/src/render/hw/layer/hw_filter_layer.hpp",
  "$_skity_root/src/render/hw/layer/hw_root_layer.cc",
  "$_skity_root/src/render/hw/layer/hw_root_layer.hpp",
  "$_skity_root/src/render/hw/layer/hw_sub_layer.cc",
  "$_skity_root/src/render/hw/layer/hw_sub_layer.hpp",
  "$_skity_root/src/render/hw/mtl/mtl_root_layer.h",
  "$_skity_root/src/render/hw/mtl/mtl_root_layer.mm",
  "$_skity_root/src/render/shape.hpp",
  "$_skity_root/src/render/sw/sw_a8_drawable.cc",
  "$_skity_root/src/render/sw/sw_a8_drawable.hpp",
  "$_skity_root/src/render/sw/sw_canvas.cc",
  "$_skity_root/src/render/sw/sw_canvas.hpp",
  "$_skity_root/src/render/sw/sw_edge.cc",
  "$_skity_root/src/render/sw/sw_edge.hpp",
  "$_skity_root/src/render/sw/sw_raster.cc",
  "$_skity_root/src/render/sw/sw_raster.hpp",
  "$_skity_root/src/render/sw/sw_render_target.cc",
  "$_skity_root/src/render/sw/sw_render_target.hpp",
  "$_skity_root/src/render/sw/sw_span_brush.cc",
  "$_skity_root/src/render/sw/sw_span_brush.hpp",
  "$_skity_root/src/render/sw/sw_stack_blur.cc",
  "$_skity_root/src/render/sw/sw_stack_blur.hpp",
  "$_skity_root/src/render/sw/sw_subpixel.hpp",
  "$_skity_root/src/render/text/atlas/atlas_allocator.cc",
  "$_skity_root/src/render/text/atlas/atlas_allocator.hpp",
  "$_skity_root/src/render/text/atlas/atlas_bitmap.cc",
  "$_skity_root/src/render/text/atlas/atlas_bitmap.hpp",
  "$_skity_root/src/render/text/atlas/atlas_glyph.hpp",
  "$_skity_root/src/render/text/atlas/atlas_manager.cc",
  "$_skity_root/src/render/text/atlas/atlas_manager.hpp",
  "$_skity_root/src/render/text/atlas/atlas_texture.cc",
  "$_skity_root/src/render/text/atlas/atlas_texture.hpp",
  "$_skity_root/src/render/text/glyph_run.cc",
  "$_skity_root/src/render/text/glyph_run.hpp",
  "$_skity_root/src/render/text/sdf_gen.cc",
  "$_skity_root/src/render/text/sdf_gen.hpp",
  "$_skity_root/src/render/text/text_render_control.cc",
  "$_skity_root/src/render/text/text_render_control.hpp",
  "$_skity_root/src/render/text/text_transform.cc",
  "$_skity_root/src/render/text/text_transform.hpp",
  "$_skity_root/src/text/font.cc",
  "$_skity_root/src/text/font_manager.cc",
  "$_skity_root/src/text/font_style.cc",
  "$_skity_root/src/text/ports/darwin/font_manager_darwin.cc",
  "$_skity_root/src/text/ports/darwin/font_manager_darwin.hpp",
  "$_skity_root/src/text/ports/darwin/scaler_context_darwin.cc",
  "$_skity_root/src/text/ports/darwin/scaler_context_darwin.hpp",
  "$_skity_root/src/text/ports/darwin/typeface_darwin.cc",
  "$_skity_root/src/text/ports/darwin/typeface_darwin.hpp",
  "$_skity_root/src/text/ports/darwin/types_darwin.cc",
  "$_skity_root/src/text/ports/darwin/types_darwin.hpp",
  "$_skity_root/src/text/ports/darwin/types_darwin_font_weights.mm",
  "$_skity_root/src/text/scaler_context.cc",
  "$_skity_root/src/text/scaler_context_cache.cc",
  "$_skity_root/src/text/scaler_context_container.cc",
  "$_skity_root/src/text/scaler_context_desc.cc",
  "$_skity_root/src/text/sfnt_header.hpp",
  "$_skity_root/src/text/text_blob.cc",
  "$_skity_root/src/text/text_run.cc",
  "$_skity_root/src/text/typeface.cc",
  "$_skity_root/src/text/utf.cc",
  "$_skity_root/src/tracing.cc",
  "$_skity_root/src/tracing.hpp",
  "$_skity_root/src/utils/annotation_mutex.hpp",
  "$_skity_root/src/utils/arena_allocator.cc",
  "$_skity_root/src/utils/arena_allocator.hpp",
  "$_skity_root/src/utils/array_list.hpp",
  "$_skity_root/src/utils/batch_group.hpp",
  "$_skity_root/src/utils/list.hpp",
  "$_skity_root/src/utils/settings.cc",
  "$_skity_root/src/utils/thread_annotations.hpp",
  "$_skity_root/src/utils/unique_id.cc",
  "$_skity_root/src/utils/unique_id.hpp",
  "$_skity_root/src/utils/vector_cache.hpp",
  "$_skity_root/src/utils/xml/xml_parser.cc",
]
skity_include_dirs = [
  "$_skity_root/include",
  "$_skity_root/third_party/glm",
]
skity_compile_definitions = [
  "SKITY_WGX=1",
  "SKITY_METAL",
  "SKITY_CPU",
  "DISABLE_SKITY_EXPERIMENTAL_WARNINGS",
]
skity_compile_options = [
  "-fno-exceptions",
  "-fno-rtti",
  "-fvisibility=hidden",
  "-fvisibility-inlines-hidden",
  "-fobjc-arc",
]
skity_link_libs = [
  "c++",
  "-framework CoreText",
  "-framework CoreGraphics",
  "-framework AppKit",
  "-framework Metal",
  "-framework Foundation",
]
