_wgsl_cross_root = get_path_info(".", "abspath")
wgsl_cross_sources = [
  "$_wgsl_cross_root/module/wgx/glsl/ast_printer.cpp",
  "$_wgsl_cross_root/module/wgx/glsl/ast_printer.h",
  "$_wgsl_cross_root/module/wgx/include/wgsl_cross.h",
  "$_wgsl_cross_root/module/wgx/msl/ast_printer.cpp",
  "$_wgsl_cross_root/module/wgx/msl/ast_printer.h",
  "$_wgsl_cross_root/module/wgx/msl/attribute.cpp",
  "$_wgsl_cross_root/module/wgx/msl/attribute.h",
  "$_wgsl_cross_root/module/wgx/msl/uniform_capture.cpp",
  "$_wgsl_cross_root/module/wgx/msl/uniform_capture.h",
  "$_wgsl_cross_root/module/wgx/semantic/bind_result.h",
  "$_wgsl_cross_root/module/wgx/semantic/resolver.cpp",
  "$_wgsl_cross_root/module/wgx/semantic/resolver.h",
  "$_wgsl_cross_root/module/wgx/semantic/scope.cpp",
  "$_wgsl_cross_root/module/wgx/semantic/scope.h",
  "$_wgsl_cross_root/module/wgx/semantic/symbol.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/attribute.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/attribute.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/expression.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/expression.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/function.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/function.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/identifier.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/identifier.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/module.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/module.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/node.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/pipeline_stage.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/statement.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/statement.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/type.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/type.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/type_decl.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/type_decl.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/variable.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/variable.h",
  "$_wgsl_cross_root/module/wgx/wgsl/ast/visitor.h",
  "$_wgsl_cross_root/module/wgx/wgsl/bind_group.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/function.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/function.h",
  "$_wgsl_cross_root/module/wgx/wgsl/parser.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/parser.h",
  "$_wgsl_cross_root/module/wgx/wgsl/program.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/scanner.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/scanner.h",
  "$_wgsl_cross_root/module/wgx/wgsl/token.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/token.h",
  "$_wgsl_cross_root/module/wgx/wgsl/type_definition.cpp",
  "$_wgsl_cross_root/module/wgx/wgsl/type_definition.h",
]
wgsl_cross_include_dirs = [
  "$_wgsl_cross_root/module/wgx/include",
  "$_wgsl_cross_root/module/wgx",
]
wgsl_cross_compile_definitions = [
  "WGX_GLSL=1",
  "WGX_MSL=1",
]
wgsl_cross_compile_options = [
  "-fno-rtti",
  "-fno-exceptions",
]
wgsl_cross_link_libs = []
